# PassHub

./: .dockerignore  .env.development  .env.example  .env.production  .env.production.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 520bbba97982_create_platform_core_tables.py  587495e3332d_create_document_extractions_and_.py  642b327554ca_make_vehicle_documents_unique_.py  a3f9e1b2c847_create_vehicle_public_access_and_public_sessions.py  b5842c565de8_create_vehicle_documents_and_document_.py  d45eaeda87ce_create_vehicles_table.py  f7bf599fbbf4_create_users_and_refresh_tokens_tables.py
apps/api/src/application/dto/: __init__.py  pagination.py
apps/api/src/application/ports/: __init__.py  ai_provider.py  hasher.py  repository.py  storage_provider.py  token_service.py  unit_of_work.py  (+1 more)
apps/api/src/modules/: README.md
apps/api/src/presentation/: main.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_health.py
apps/api/tests/unit/: test_ai_cost_estimator.py  test_ai_extraction_feature_flag.py  test_document_extraction_service.py  test_drivepass_intelligence_gateway.py  test_pin_hasher.py  test_public_access_service.py  test_public_session.py  test_public_session_service.py  test_public_token_generator.py  test_user_module_service.py  test_vehicle_document_service.py  test_vehicle_service.py
(+330 files in other folders)
